2016-06-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (strnum2): New test.
	* strnum2.awk, strnum2.ok: New files.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (subback): New test.
	* subback.awk, subback.in, subback.ok: New files.
	Thanks to Mike Brennan for the test.

	Unrelated:

	* Makefile.am (FAIL_CODE1): Update the list.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (GAWK_EXT_TESTS): Add mixed1. Who knows
	how long that's been broken...
	* mixed1.ok: Adjust to match what the code produces.
	Thanks to John E. Malmberg <wb8tyw@qsl.net> for the report.

2016-06-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (forcenum, ignrcas3, intarray, lintexp, lintindex,
	lintint, lintlength, lintset, mpfrstrtonum, mpgforcenum, printfchar,
	strtonum1): New tests.
	* forcenum.awk, forcenum.ok, ignrcas3.awk, ignrcas3.ok, intarray.awk,
	intarray.ok, lintexp.awk, lintexp.ok, lintindex.awk, lintindex.ok,
	lintint.awk, lintint.ok, lintlength.awk, lintlength.ok, lintset.awk,
	lintset.ok, mpfrstrtonum.awk, mpfrstrtonum.ok, mpgforcenum.awk,
	mpgforcenum.ok, printfchar.awk, printfchar.ok, strtonum1.awk,
	strtonum1.ok: New files.

2016-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab10.awk, symtab10.in, symtab10.ok: New files.
	* Makefile.am (symtab10): New test.
	Thanks to Hermann Peifer for the report.

2016-06-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (hex2): New test.
	* hex2.awk, hex2.in, hex2.ok: New files.

2016-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fsnul1): New test.
	* fsnul1.awk, fsnul1.in, fsnul1.ok: New files.

2016-05-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (arrayind2): New test.
	* arrayind2.awk, arrayind2.ok: New files.
	Thanks to Andrew J. Schorr <aschorr@telemetry-investments.com>.
