@@ -1,3 +1,8 @@
+2016-06-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* strnum2.awk, strnum2.ok: Improve test case to show both OFMT and
+	CONVFMT conversions.
+
 2016-06-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (strnum2): New test.
